# nauty

./: Containerfile  Makefile  configure_enclave.sh  expose_enclave.sh
src/nautilus-server/: app_state.py  bcs.py  common.py  nautilus_server.py  nsm_helper.py  requirements.txt  run.sh
src/nautilus-server/apps/: __init__.py  seal_example.py  twitter_example.py  weather_example.py
src/nautilus-server/src/: common.rs  main.rs
src/nsm-attestation-helper/: Cargo.toml
src/nsm-attestation-helper/src/: main.rs
