[package]
name = "nsm-attestation-helper"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"

[[bin]]
name = "nsm-attestation-helper"
path = "src/main.rs"

[dependencies]
nsm-api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = "0.4"

